# wexa-ai

./: README.md
backend/: .dockerignore  .env.example  celery-docker-compose.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/alerts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/alerts/migrations/: 0001_initial.py
backend/backend/: celery.py  settings.py  urls.py
backend/common/: urls.py  views.py
backend/common/services/: accept_email.py  email_service.py  invite_email.py
backend/common/templates/emails/: accept_invite_email.html  invite_email.html  welcome_email.html
backend/dashboards/: urls.py  views.py
backend/events/: admin.py  models.py  serializers.py  urls.py  views.py
backend/events/migrations/: 0001_initial.py
backend/organizations/: admin.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/organizations/migrations/: 0001_initial.py  0002_invitation.py  0003_alter_invitation_expires_at_apikey.py  0004_alter_invitation_expires_at.py
frontend/: next.config.ts  package.json  proxy.ts
frontend/app/: layout.tsx
frontend/components/: app-sidebar.tsx  chart-area-interactive.tsx  login-form.tsx  nav-documents.tsx  nav-main.tsx  nav-secondary.tsx  nav-user.tsx  recent-activity-table.tsx  section-cards.tsx  signup-form.tsx  site-header.tsx
frontend/context/: auth-provider.tsx  tanstack.tsx
frontend/lib/: axios.ts
(+16 files in other folders)
