[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.7",
    "celery>=5.6.3",
    "channels-redis>=4.3.0",
    "django==6.0.5",
    "django-celery-beat>=2.9.0",
    "django-channels>=0.7.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-ratelimit>=4.1.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "social-auth-app-django>=5.9.0",
    "structlog>=25.5.0",
    "weasyprint>=68.1",
]
